test/k8sT/manifests/fqdn-proxy-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "fqdn-proxy-policy.yaml"
metadata:
  name: "fqdn-proxy-policy.yaml"
spec:
  endpointSelector:
    matchLabels:
      id: app2
  egress:
  - toPorts:
    - ports:
      - port: '53'
        protocol: ANY
      rules:
        dns:
        - matchPattern: world1.cilium.test
  - toFQDNs:
    - matchPattern: "*.cilium.test"
